Fix wrong color

--- a/src/core/_config.scss
+++ b/src/core/_config.scss
@@ -449,7 +449,7 @@ $expandable-area-title-color: $ids-color-font-base;
 $cardlist-bg-color: $ids-color-palette-white;
 $cardlist-border-color: $ids-color-palette-graphite-30;
 $cardlist-header-color: $ids-color-font-base;
-$cardlist-actions-color: $ids-color-font-base;
+$cardlist-actions-color: $ids-color-palette-slate-60;
 $cardlist-text-color: $font-color;
 
 // Checkboxes
